--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -3,98 +3,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context="com.annapol04.munchkin.PlayDesk">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="horizontal"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:padding="8dp">
 
         <TextView
             android:id="@+id/name_of_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:maxLength="10"
             android:layout_marginRight="8dp"
-            android:text="name" />
+            android:maxLength="10"
+            android:text="name"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/level_of_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:maxLength="10"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:text="Your level" />
+            android:maxLength="10"
+            android:text="Your level"
+            android:textSize="20sp" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Show Next Player"
-            android:textSize="24sp"
-            android:onClick="showNextPlayer" />
+            android:onClick="showNextPlayer"
+            android:text="Next Player"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/left_relative_Layout"
             android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/door_layout"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:padding="8dp">
+            android:layout_alignParentRight="true">
 
-            <TextView
-                android:id="@+id/first_card_name"
-                android:layout_width="0dp"
+            <ImageButton
+                android:id="@+id/deck_doors"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="First Card" />
+                android:layout_alignParentRight="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/door" />
+        </RelativeLayout>
 
-            <TextView
-                android:id="@+id/second_card_name"
-                android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Second Card" />
+            android:id="@+id/treasure_layout"
+            android:layout_toLeftOf="@id/door_layout">
 
-            <TextView
-                android:id="@+id/third_card_name"
-                android:layout_width="0dp"
+            <ImageButton
+                android:id="@+id/deck_treasure"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Third Card" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/treasure" />
+        </RelativeLayout>
 
-            <TextView
-                android:id="@+id/fourth_card_name"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Fourth Card" />
-        </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_cards"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="8dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_hand_of_player"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="8dp" />
+
 
 </LinearLayout>
