--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -50,7 +50,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="3">
 
         <RelativeLayout
             android:id="@+id/left_relative_Layout"
@@ -61,13 +61,16 @@
 
         <RelativeLayout
             android:id="@+id/door_layout"
-            android:layout_width="50dp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="4dp"
             android:layout_alignParentRight="true">
 
             <ImageButton
                 android:id="@+id/deck_doors"
-                android:layout_width="50dp"
+                android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:scaleType="centerCrop"
@@ -75,14 +78,18 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="50dp"
-                android:layout_height="match_parent"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
             android:id="@+id/treasure_layout"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingRight="4dp"
+
             android:layout_toLeftOf="@id/door_layout">
 
             <ImageButton
                 android:id="@+id/deck_treasure"
-                android:layout_width="50dp"
+                android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/treasure" />
@@ -100,7 +107,7 @@
         android:id="@+id/recycler_view_cards"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:padding="8dp" />
 
     <View
@@ -112,7 +119,7 @@
         android:id="@+id/recycler_view_hand_of_player"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:padding="8dp" />
 
 
