--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="match_parent"
+    android:layout_width="70dp"
+    android:layout_height="70dp"
     android:scaleType="centerCrop"
     android:id="@+id/card_item"
-    android:padding="8dp">
+    android:padding="16dp">
 
 </ImageButton>
