--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -37,14 +37,18 @@
                 android:text="Your level"
                 android:textSize="20sp" />
 
-
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="6"
-            android:padding="4dp">
+            android:layout_weight="8"
+            android:padding="6dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_cards"
@@ -52,6 +56,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="8dp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_hand_of_player"
@@ -63,6 +72,11 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark" />
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -73,6 +87,29 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Spieltisch"
+                android:textStyle="italic"
+                android:fontFamily="sans-serif-condensed"
+
+                android:textSize="24sp"
+                android:textAllCaps="true"
+                android:gravity="center" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7">
 
             <ImageView
                 android:layout_width="100dp"
@@ -86,18 +123,35 @@
 
         </LinearLayout>
 
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="3">
 
-            <TextView
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="irgenwas was im spiel war" />
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/dialog" />
+            </ScrollView>
+
+
         </LinearLayout>
     </LinearLayout>
 
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -109,6 +163,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -136,17 +191,23 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorPrimaryDark" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center"
-            android:layout_weight="3">
+            android:layout_weight="4">
 
             <ImageButton
                 android:id="@+id/deck_treasure"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="155dp"
                 android:scaleType="centerCrop"
+                android:background="@android:color/transparent"
                 android:src="@drawable/treasure" />
         </LinearLayout>
 
@@ -154,12 +215,13 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center"
-            android:layout_weight="3">
+            android:layout_weight="4">
 
             <ImageButton
                 android:id="@+id/deck_doors"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="155dp"
+                android:background="@android:color/transparent"
                 android:layout_alignParentRight="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/door" />
