--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="70dp"
     android:layout_height="70dp"
     android:scaleType="centerCrop"
+    android:background="@android:color/transparent"
     android:id="@+id/card_item"
     android:padding="16dp">
 
