--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
+    android:background="#EFEBE9"
     tools:context="com.annapol04.munchkin.PlayDesk">
 
     <LinearLayout
@@ -25,6 +26,8 @@
                 android:layout_marginRight="8dp"
                 android:maxLength="10"
                 android:text="name"
+                android:textStyle="italic"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="24sp" />
 
             <TextView
@@ -35,6 +38,8 @@
                 android:layout_marginRight="8dp"
                 android:maxLength="10"
                 android:text="Your level"
+                android:textStyle="italic"
+                android:fontFamily="sans-serif-condensed"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -42,7 +47,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="#6D4C41" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +65,7 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimaryDark" />
+                android:background="#6D4C41" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_hand_of_player"
@@ -75,7 +80,7 @@
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark" />
+        android:background="#6D4C41" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -104,7 +109,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="#6D4C41" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -127,7 +132,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="#6D4C41" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -151,7 +156,7 @@
     <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark" />
+        android:background="#6D4C41" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -174,7 +179,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_dialog_info" />
+                    android:src="@android:drawable/ic_menu_info_details"
+                    android:tint="@android:color/black" />
             </LinearLayout>
 
             <LinearLayout
@@ -186,7 +192,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
+                    android:src="@android:drawable/ic_menu_close_clear_cancel"
+                    android:tint="#F44336" />
             </LinearLayout>
 
         </LinearLayout>
@@ -194,7 +201,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="#6D4C41" />
 
         <LinearLayout
             android:layout_width="match_parent"
