--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -116,15 +116,12 @@
             android:layout_height="0dp"
             android:layout_weight="7">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="120dp"
-                android:src="@drawable/bigfoot" />
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="120dp"
-                android:src="@drawable/gazebo" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_desk"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="8dp" />
 
         </LinearLayout>
 
