--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -19,28 +19,60 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/name_of_player"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:maxLength="10"
-                android:text="name"
-                android:textStyle="italic"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="24sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/level_of_player"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:maxLength="10"
-                android:text="Your level"
-                android:textStyle="italic"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="20sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/name_of_player"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        android:maxLength="10"
+                        android:textStyle="italic"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="name"
+
+                        android:textSize="24sp" />
+
+                    <TextView
+                        android:id="@+id/level_of_player"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:maxLength="10"
+                        android:textStyle="italic"
+                        android:fontFamily="sans-serif-condensed"
+                        android:text="Your level"
+
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/power_of_player"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        android:text="power"
+                        android:textStyle="italic"
+                        android:fontFamily="sans-serif-condensed"
+                        android:textSize="24sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -86,6 +118,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
+        android:padding="4dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -99,7 +132,6 @@
                 android:text="Spieltisch"
                 android:textStyle="italic"
                 android:fontFamily="sans-serif-condensed"
-
                 android:textSize="24sp"
                 android:textAllCaps="true"
                 android:gravity="center" />
@@ -159,6 +191,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:padding="4dp"
         android:orientation="vertical">
 
         <LinearLayout
