--- a/app/src/main/res/layout/card_item_zoom.xml
+++ b/app/src/main/res/layout/card_item_zoom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="280dp"
-    android:layout_height="fill_parent"
+    android:layout_height="380dp"
     android:scaleType="centerCrop"
-    android:background="@android:color/transparent"
+    android:background="@drawable/background_selector"
+
     android:id="@+id/card_item_zoom"
     android:padding="16dp"
-    android:layout_marginBottom="4dp">
+    android:layout_margin="4dp">
 
 </ImageButton>
