--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
     >
@@ -9,30 +9,29 @@
         android:id="@+id/recycler_view_zoom_cards"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:background="@drawable/background_selector"
         android:padding="8dp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@android:color/transparent">
+ <LinearLayout
+     android:layout_width="wrap_content"
+     android:layout_height="match_parent"
+     android:orientation="vertical"
+     android:padding="8dp">
+     <Button
+         android:id="@+id/move_to_desk_button"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:onClick="start"
+         android:text="Move to Desk"
+         android:textAllCaps="true" />
 
-        <Button
-            android:id="@+id/move_to_desk_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="start"
-            android:text="Move to Desk"
-            android:textAllCaps="true" />
-
-        <Button
-            android:id="@+id/move_to_hand_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="start"
-            android:text="Move to Hand"
-            android:textAllCaps="true" />
-
-    </LinearLayout>
+     <Button
+         android:id="@+id/move_to_hand_button"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:onClick="start"
+         android:text="Move to Hand"
+         android:textAllCaps="true" />
+ </LinearLayout>
 
 </LinearLayout>
