--- a/app/src/main/res/layout/zoom_layout.xml
+++ b/app/src/main/res/layout/zoom_layout.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    >
+    android:background="@android:color/transparent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_zoom_cards"
@@ -12,26 +11,39 @@
         android:background="@drawable/background_selector"
         android:padding="8dp" />
 
- <LinearLayout
-     android:layout_width="wrap_content"
-     android:layout_height="match_parent"
-     android:orientation="vertical"
-     android:padding="8dp">
-     <Button
-         android:id="@+id/move_to_desk_button"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:onClick="start"
-         android:text="Move to Desk"
-         android:textAllCaps="true" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-     <Button
-         android:id="@+id/move_to_hand_button"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:onClick="start"
-         android:text="Move to Hand"
-         android:textAllCaps="true" />
- </LinearLayout>
+        <Button
+            android:id="@+id/move_to_played_button"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="Move to Played"
+            android:textAllCaps="true" />
+
+        <Button
+            android:id="@+id/move_to_hand_button"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="Move to Hand"
+            android:textAllCaps="true" />
+
+        <Button
+            android:id="@+id/move_to_desk_buton"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="Move to desk"
+            android:textAllCaps="true" />
+
+        <Button
+            android:id="@+id/move_to_passive_card_deck"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="brauche ned mehr"
+            android:textAllCaps="true" />
+    </LinearLayout>
 
 </LinearLayout>
