--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:scaleType="centerCrop"
+    android:layout_width="100dp"
+    android:layout_height="120dp"
+    android:scaleType="centerInside"
+    android:layout_margin="8dp"
     android:background="@android:color/transparent"
-    android:id="@+id/card_item"
-    android:padding="16dp">
+    android:id="@+id/card_item">
 
 </ImageButton>
