margin and padding

--- a/app/src/main/res/layout/dialog_fight_button.xml
+++ b/app/src/main/res/layout/dialog_fight_button.xml
@@ -1,57 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dialog_fight_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:id="@+id/dialog_fight_view">
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="6">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="4dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/monster_card_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/humongousplustomonster"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/monster_fightlevel" />
+            android:fontFamily="sans-serif-condensed"
+            android:text="@string/monster_fightlevel"
+            android:textSize="24sp"
+            android:textStyle="italic"
+            />
 
         <TextView
             android:id="@+id/monster_fightlevel_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1" />
+            android:fontFamily="sans-serif-condensed"
+
+            android:text="1"
+            android:textSize="24sp"
+            android:textStyle="italic" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_margin="4dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/player_card_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/warrior"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/your_fightlevel" />
+            android:fontFamily="sans-serif-condensed"
+            android:text="@string/your_fightlevel"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/your_fightlevel_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1" />
+            android:fontFamily="sans-serif-condensed"
+            android:text="1"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
+    </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:padding="8dp">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="Fight"
+            />
     </LinearLayout>
 
 </LinearLayout>
