--- a/app/src/main/res/layout/activity_play_desk.xml
+++ b/app/src/main/res/layout/activity_play_desk.xml
@@ -29,7 +29,7 @@
         android:layout_height="match_parent"
         android:background="#EFEBE9"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:padding="4dp"
         tools:context="com.annapol04.munchkin.gui.PlayDeskActivity">
 
         <ProgressBar
@@ -50,8 +50,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:orientation="vertical"
-                android:padding="4dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -60,11 +59,11 @@
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="8dp"
-                        android:paddingLeft="8dp"
+                        android:layout_weight="1"
                         android:fontFamily="sans-serif-condensed"
+                        android:layout_marginStart="8dp"
                         android:text="Hand"
                         android:textSize="24sp"
                         android:textStyle="italic" />
@@ -72,12 +71,12 @@
 
                     <TextView
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="8dp"
-                        android:paddingLeft="8dp"
+                        android:layout_weight="1"
                         android:fontFamily="sans-serif-condensed"
+                        android:layout_marginStart="8dp"
                         android:text="Played"
                         android:textSize="24sp"
                         android:textStyle="italic" />
@@ -92,19 +91,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="8"
-                    android:padding="6dp">
+                    android:layout_weight="8">
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
+
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/recycler_view_hand_of_player"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:padding="8dp" />
+                            android:layout_weight="1" />
 
                     </LinearLayout>
 
@@ -115,15 +113,14 @@
 
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_weight="1">
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/recycler_view_played_cards"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:padding="8dp" />
+                            android:layout_weight="1" />
 
                     </LinearLayout>
 
@@ -175,7 +172,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:padding="8dp" />
+                        android:layout_margin="4dp"/>
 
                 </LinearLayout>
 
@@ -188,11 +185,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/fight_button"
@@ -209,7 +201,6 @@
                             android:layout_weight="1"
                             android:onClick="onNextPlayerButtonPressed"
                             android:text="@string/next_player" />
-                    </LinearLayout>
 
 
                 </LinearLayout>
@@ -226,14 +217,14 @@
 
                     <ScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_margin="2dp">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/dialog" />
                     </ScrollView>
-
 
                 </LinearLayout>
             </LinearLayout>
@@ -247,7 +238,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:padding="4dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -259,10 +249,11 @@
                     <ImageButton
                         android:id="@+id/deck_treasure"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:adjustViewBounds="true"
                         android:background="@android:color/transparent"
-                        android:scaleType="fitCenter"
-                        android:layout_margin="16dp"
+                        android:scaleType="fitXY"
                         android:src="@drawable/treasure" />
                 </LinearLayout>
 
@@ -275,11 +266,11 @@
                     <ImageButton
                         android:id="@+id/deck_doors"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_alignParentRight="true"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:adjustViewBounds="true"
                         android:background="@android:color/transparent"
-                        android:scaleType="fitCenter"
-                        android:layout_margin="16dp"
+                        android:scaleType="fitXY"
                         android:src="@drawable/door" />
                 </LinearLayout>
 
